--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="rabi.com.cgpagarbage.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:id="@+id/reset"
+        android:orderInCategory="2"
+        android:title="@string/reset"
+        app:showAsAction="collapseActionView"/>
+    <item
+        android:id="@+id/stats"
+        android:icon="@drawable/ic_pie_chart"
+        android:orderInCategory="1"
+        android:title="@string/stats"
+        app:showAsAction="ifRoom|collapseActionView"/>
+    <item
+        android:id="@+id/setting"
+        android:orderInCategory="3"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        />
 </menu>
