--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="1"
@@ -10,76 +11,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/li1"
-        android:background="#8bbd02">
+        tools:ignore="UselessParent">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Course"
-            android:id="@+id/crs_View"
-            android:layout_weight="1"
-            android:padding="7dp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/item_course"
             android:layout_weight="1"
-            android:padding="7dp" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/li2"
-        android:layout_below="@+id/li1"
-        android:background="#a8d326">
+            android:gravity="center"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:fontFamily="sans-serif"
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:textColor="#ecf0f1"
+            android:background="#00bfa5" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Grade"
-            android:id="@+id/gra_View"
-            android:layout_weight="1"
-            android:padding="7dp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/item_grade"
-            android:layout_weight="1"
-            android:padding="7dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/li2"
-        android:id="@+id/li3"
-        android:background="#c5e26e">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Credit"
-            android:id="@+id/cre_View"
-            android:layout_weight="1"
-            android:padding="7dp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
             android:id="@+id/item_credit"
             android:layout_weight="1"
-            android:padding="7dp" />
+
+            android:gravity="center"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:fontFamily="sans-serif"
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:textColor="#ecf0f1"
+            android:background="#009688" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/item_grade"
+            android:layout_weight="1"
+
+            android:gravity="center"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:fontFamily="sans-serif"
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:textColor="#ecf0f1"
+            android:background="#00bfa5" />
+
     </LinearLayout>
+
 </RelativeLayout>
